# regulon

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  safety.yml
config/: regulon.yaml  safety.yaml
docs/adr/: 001-why-regulon.md  002-local-first-real-inference.md
scripts/: public_safety_scan.py
src/regulon/: __init__.py
src/regulon/core/: __init__.py  clock.py  config.py  errors.py  events.py  hashing.py  ids.py
tests/integration/: test_m0_repo_health.py
tests/unit/: test_clock.py  test_config.py  test_errors.py  test_events.py  test_hashing.py  test_ids.py  test_public_safety_scan.py
