[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulon"
version = "0.0.1"
description = "Governed multi-agent RAG platform: LangGraph orchestration, hybrid retrieval, adaptive routing, HITL approvals, RBAC, audit trails, and evaluation-gated CI. Local-first, open source."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shake MD Tareq Hasan" }]
keywords = [
    "multi-agent",
    "rag",
    "langgraph",
    "llm",
    "governance",
    "hitl",
    "retrieval",
    "evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/shakehasan/regulon"
Issues = "https://github.com/shakehasan/regulon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/regulon"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "D",   # pydocstyle
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
files = ["src", "scripts"]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: integration tests (may be slower, still hermetic)",
    "adversarial: guardrail attack-suite tests",
]

[tool.coverage.run]
source = ["regulon"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
